# MixedElasticity

./: .gitignore  CMakeLists.txt  README.md
MHM-Elas-3D/: CMakeLists.txt  VoronoiAnalise.cpp  VoronoiAnalise.h  meshpath_config.h.in  voronoi_mixed_elas.cpp
MHM-Elas-3D/mesh-generator/: GmeshInterface.py  MHMesh1.py  NacaMesh.py  PolyhedralMesh.nb  PolyhedralMeshEquilateralTets.nb  RandomHolesGenerator.py  RandomTest.json  TPZStokesInputCreator.py
MHM-Elas-3D/meshes/: MHMeshEquiTet_np1.msh  MHMeshEquiTet_np2.msh  MHMeshEquiTet_np3.msh  MHMeshEquiTet_np4.msh  MHMeshFirstTests.msh  MHMeshSimple_np2.msh  MHMeshSimple_np3.msh  MHMeshSimple_np4.msh  MHMeshSimple_np5.msh  MHMeshSimple_np6.msh  MHMeshSimple_np7.msh  MHMeshSimple_np8.msh  MHMesh_np2.msh  MHMesh_np3.msh  MHMesh_np4.msh  MHMesh_np5.msh  MHMesh_np6.msh  MHMesh_np7.msh  MHMesh_np8.msh
Mixed2D/: AiryFunctionHoledPlate.cpp  AiryFunctionHoledPlate.h  AiryFunctionLoadedBeam.cpp  AiryFunctionLoadedBeam.h  CMakeLists.txt  TPZCompElDiscStress.cpp  TPZCompElDiscStress.h  TPZCompElDiscStressBound.cpp  TPZCompElDiscStressBound.h  TPZCompelDiscScaled.cpp  TPZCompelDiscScaled.h  TPZCompelDiscScaled.hpp  TPZMixedElasticityCMeshCreator.cpp  TPZMixedElasticityCMeshCreator.h  TPZMixedElasticityND.cpp  TPZMixedElasticityND.h  TPZMixedElasticityNDAiry.cpp  TPZMixedElasticityNDAiry.h  TPZMixedElasticityUtils.cpp  TPZMixedElasticityUtils.h  common_files.cpp  main-Update.cpp  main-Yotov.cpp  main-Yotov7spaces.cpp  main-five.cpp  main-h1.cpp  main-hpc4e.cpp  main-incompressible-solid.cpp  main-seven.cpp  main.cpp  mainGirkmann.cpp  main_1fracture.cpp  main_MixedElastOscillat.cpp  main_beam.cpp  main_simple.cpp  main_test.cpp  main_test_back.cpp  meshgen.cpp  meshgen.h  mixelas_config.h.in  (+2 more)
data/32/: e_1.txt  e_10.txt  e_11.txt  e_12.txt  e_13.txt  e_14.txt  e_15.txt  e_16.txt  e_17.txt  e_18.txt  e_19.txt  e_2.txt  e_20.txt  e_21.txt  e_22.txt  e_23.txt  e_24.txt  e_25.txt  e_26.txt  e_27.txt  e_28.txt  e_29.txt  e_3.txt  e_30.txt  e_31.txt  e_32.txt  e_33.txt  e_4.txt  e_5.txt  e_6.txt  e_7.txt  e_8.txt  e_9.txt  nu_1.txt  nu_10.txt  nu_11.txt  nu_12.txt  nu_13.txt  nu_14.txt  nu_15.txt  (+26 more)
mesh/: 1element.geo  1element.msh  1fracture.geo  1fracture.msh  holed_plate.geo  holed_plate.msh  plate.geo  plate.msh  test.geo
